--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
 </head>
 <body class="font-EB-Garamond">
     <header>
-      <nav>
+      <nav class="mx-5">
             <div class="navbar bg-base-100">
                 <div class="flex-1">
                   <div class="dropdown">
                     <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-                        <svg xmlns="" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+                        <svg xmlns="" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
                     </div>
                     <ul tabindex="0" class="menu  menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
                       <li><a class="text-xl">Home</a></li>
                       <li><a class="text-xl">Services</a></li>
                       <li><a class="text-xl">Cases</a></li>
-                      <li><a class="text-xl">Blog</a></li>
+                      <li><a class="text-xl">Blog</a></li> 
                       <li><a class="text-xl">Contact Us</a></li>
                     </ul>
                   </div>
-                  <a class="btn btn-ghost text-xl"><img src="./images/logo2.png"></a>
+                  <a class="btn btn-ghost hidden lg:block "><img src="./images/logo2.png"></a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                   <ul class="menu menu-horizontal px-1">
@@ -65,21 +65,21 @@
                   </ul>
                 </div>
                 <div class="">
-                  <a class="btn w-52 h-14 py-5 px-7 bg-[#B68C5A] text-white font-semibold ">Free Consultation</a>
+                  <a class="btn w-44 h-14 py-5 px-7 bg-[#B68C5A] text-white font-semibold ">Free Consultation</a>
                 </div>
               </div>
      </nav>
 
 <!-- banner section -->
-<section class="container my-24 pl-40  rounded-2xl">
+<section class="container my-24 px-5 lg:pl-40  rounded-2xl">
   <div class="hero w-full" style="background-image: url(./images/banner.png);">
     <div class="hero-overlay bg-opacity-25"></div>
     <div class="hero-content text-center text-neutral-content">
       <div>
-        <h1 class=" mb-5 text-7xl text-[#FFF] font-extrabold mt-28">We Provide Effective <br> Legal Solutions</h1>
-        <p class="mb-5 text-xl text-[#E7E7E7]">There are many variations of passages of Lorem Ipsum available, but the majority
+        <h1 class=" mb-5 text-3xl lg:text-6xl text-[#FFF] font-medium lg:font-bold mt-11 lg:mt-28">We Provide Effective <br> Legal Solutions</h1>
+        <p class="mb-5 text-xl lg:text-xl text-[#E7E7E7]">There are many variations of passages of Lorem Ipsum available, but the majority
         <br> have suffered alteration in some form, by injected humour.</p>
-      <div class="flex justify-center items-center gap-6 mb-36">
+      <div class="flex justify-center items-center gap-6 mb-10 lg:mb-36">
         <input type="search" placeholder="Search your services" class="input py-5 pl-5 text-xl input-bordered w-full max-w-xs" />
         <button class="btn my-5 px-10 bg-[#B68C5A] text-xl text-white font-semibold">Search</button>
       </div>
@@ -89,13 +89,15 @@
   </div>
   
 </section>
-    </header>
-
-
-
-
-
+  </header>
     <main>
+
+      <!-- The Legal Practice Area -->
+      <section class="container my-24">
+        <h1>The Legal Practice Area</h1>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+
+      </section>
 
 
     </main>
