--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 </head>
-<body class="font-EB-Garamond">
+<body class="font-EB-Garamond bg-[#FFF]">
     <header>
       <nav class="mx-5">
             <div class="navbar bg-base-100">
@@ -87,18 +87,126 @@
       </div>
     </div>
   </div>
-  
 </section>
   </header>
     <main>
-
       <!-- The Legal Practice Area -->
-      <section class="container my-24">
-        <h1>The Legal Practice Area</h1>
-        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+      <section class="container my-24 text-center">
+        <h1 class="text-[#414040] text-4xl font-extrabold">The Legal Practice Area</h1>
+        <p class=" text-[#707070] text-xl p-3 lg:p-16 mx-auto ">This area of law is less confrontational and more consensus-driven than litigation and a slightly less adversarial practice area than, for example, Mergers and Acquisition work. This is largely because in this area the bargaining power tends to lie heavily with the lender party.</p>
 
+        <!-- Legal Card -->
+       <section class="grid grid-cols-1  lg:grid-cols-3 px-3 lg:px-80 gap-3 lg:gap-0">
+        <!-- First card -->
+        <div class=" border-r-2 border-l-2 border-b-2 bg-base-100 shadow-xl">
+        <figure class="px-10 pt-10">
+          <img src="./images/business.png "class="rounded-xl w-[4.5rem] h-[4.5rem]" />
+        </figure>
+        <div class="card-body items-center text-center ">
+          <h2 class="card-title text-[#414040] text-3xl m-auto font-extrabold  mb-6">Business Law</h2>
+          <p class="text-[#707070] text-xl">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+          <div class="card-actions hover:text-yellow-500">
+           <img src="./images/Frame.png">
+          </div>
+        </div>
+      </div>
+        <!-- Second card-->
+        <div class="lg:border-r-2 lg:border-l-2 lg:border-b-2  bg-base-100 shadow-xl">
+        <figure class="px-10 pt-10">
+          <img src="./images/business.png "class="rounded-xl w-[4.5rem] h-[4.5rem]" />
+        </figure>
+        <div class="card-body items-center text-center">
+          <h2 class="card-title text-[#414040] text-3xl m-auto font-extrabold  mb-6">Business Law</h2>
+          <p class="text-[#707070] text-xl">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+          <div class="card-actions hover:text-yellow-500">
+           <img src="./images/Frame.png">
+          </div>
+        </div>
+      </div>
+        <!-- Third card -->
+        <div class="lg:border-r-2 lg:border-l-2 border-b-2  bg-base-100 shadow-xl">
+        <figure class="px-10 pt-10">
+          <img src="./images/business.png "class="rounded-xl w-[4.5rem] h-[4.5rem]" />
+        </figure>
+        <div class="card-body items-center text-center">
+          <h2 class="card-title text-[#414040] text-3xl m-auto font-extrabold  mb-6">Business Law</h2>
+          <p class="text-[#707070] text-xl">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+          <div class="card-actions hover:text-yellow-500">
+           <img src="./images/Frame.png">
+          </div>
+        </div>
+      </div>
+        <!-- Fourth card -->
+        <div class="border-r-2 border-l-2 border-b-2 border-t-2  bg-base-100 shadow-xl">
+        <figure class="px-10 pt-10">
+          <img src="./images/business.png "class="rounded-xl w-[4.5rem] h-[4.5rem]" />
+        </figure>
+        <div class="card-body items-center text-center">
+          <h2 class="card-title text-[#414040] text-3xl m-auto font-extrabold  mb-6">Business Law</h2>
+          <p class="text-[#707070] text-xl">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+          <div class="card-actions hover:text-yellow-500">
+           <img src="./images/Frame.png">
+          </div>
+        </div>
+      </div>
+        <!-- Fifth  card -->
+        <div class="border-r-2 border-l-2 border-t-2  bg-base-100 shadow-xl">
+        <figure class="px-10 pt-10">
+          <img src="./images/business.png "class="rounded-xl w-[4.5rem] h-[4.5rem]" />
+        </figure>
+        <div class="card-body items-center text-center">
+          <h2 class="card-title text-[#414040] text-3xl m-auto font-extrabold  mb-6">Business Law</h2>
+          <p class="text-[#707070] text-xl">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+          <div class="card-actions hover:text-yellow-500">
+           <img src="./images/Frame.png">
+          </div>
+        </div>
+      </div>
+        <!-- Sixth card -->
+        <div class="border-l-2 border-t-2 bg-base-100 shadow-xl">
+        <figure class="px-10 pt-10">
+          <img src="./images/business.png "class="rounded-xl w-[4.5rem] h-[4.5rem]" />
+        </figure>
+        <div class="card-body items-center text-center">
+          <h2 class="card-title text-[#414040] text-3xl m-auto font-extrabold  mb-6">Business Law</h2>
+          <p class="text-[#707070] text-xl">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+          <div class="card-actions hover:text-yellow-500">
+           <img src="./images/Frame.png">
+          </div>
+        </div>
+      </div>
+       </section>
       </section>
+ <section class="container my-24">
+    <h1>What Our Client Say</h1>
+    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
 
+    <div class="carousel w-full">
+     <!-- Slider 1 -->
+      <div id="slide1" class="carousel-item :h-[500px] relative w-full bg-bike-primary-bg">
+          <div class="flex flex-col lg:flex-row gap-20 p-4 lg:mx-52 lg:mt-14">
+              <div class="space-y-7 flex-1">
+                  <h1 class="lg:text-4xl text-xl font-bold m-4">Kawasaki Z900RS
+      <br> 
+      with Smile</h1>
+                  <p class="text-xs  w-[250px] lg:w-[400px] m-4">Lifestyle ohne Fake. Die perfekte Modern Classic Kombination aus Oldschool-Look mit den neuesten Errungenschaften und Innovationen der Technik. Die Z900RS SE ist die Antwort auf all diese Anforderungen der heutigen Straßen. Dieses
+                      Bike hat einen Öhlins-Dämpfer erhalten, sowie eine überarbeitete Gabel. Der Spirit ist klar an die Legende der 1970er angelegt, die Kawasaki Z1. Die Z900RS SE ist nicht nur eine Homage an jenes Bike, sondern technisch einfach
+                      up-to-date.
+                  </p>
+                  <button class="btn bg-bike-primary text-white ml-4">Purchase</button>
+              </div>
+              <div class="flex-1">
+                  <img src="./images/banner.png" class=" w-[250px]  mb-0 pb-5 lg:w-[450px]" />
+              </div>
+          </div>
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide6" class="btn btn-circle">❮</a>
+              <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+      </div>
+    </div>
+     
+ </section>
 
     </main>
 
