--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
 <!-- banner section -->
 <section class="container my-24 px-5 lg:pl-40  rounded-2xl">
-  <div class="hero w-full" style="background-image: url(./images/banner.png);">
-    <div class="hero-overlay bg-opacity-25"></div>
+  <div class="hero w-full rounded-xl" style="background-image: url(./images/banner.png);">
+    <div class="hero-overlay rounded-xl bg-opacity-25"></div>
     <div class="hero-content text-center text-neutral-content">
       <div>
         <h1 class=" mb-5 text-3xl lg:text-6xl text-[#FFF] font-medium lg:font-bold mt-11 lg:mt-28">We Provide Effective <br> Legal Solutions</h1>
@@ -177,26 +177,21 @@
       </div>
        </section>
       </section>
- <section class="container my-24">
-    <h1>What Our Client Say</h1>
-    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-
-    <div class="carousel w-full">
+ <section class="container my-24 mx-24">
+ <div class="carousel">
      <!-- Slider 1 -->
-      <div id="slide1" class="carousel-item :h-[500px] relative w-full bg-bike-primary-bg">
-          <div class="flex flex-col lg:flex-row gap-20 p-4 lg:mx-52 lg:mt-14">
+     <div id="slidel"
+class="carousel-item relative rounded-xl w-full bg-[url(./images/banner.png)] bg-center bg-cover h-[70vh] flex
+items-center justify-center m-auto">
+          <div class="flex hero-overlay rounded-xl bg-opacity-30 text-center items-center  ">
               <div class="space-y-7 flex-1">
-                  <h1 class="lg:text-4xl text-xl font-bold m-4">Kawasaki Z900RS
-      <br> 
-      with Smile</h1>
-                  <p class="text-xs  w-[250px] lg:w-[400px] m-4">Lifestyle ohne Fake. Die perfekte Modern Classic Kombination aus Oldschool-Look mit den neuesten Errungenschaften und Innovationen der Technik. Die Z900RS SE ist die Antwort auf all diese Anforderungen der heutigen Straßen. Dieses
-                      Bike hat einen Öhlins-Dämpfer erhalten, sowie eine überarbeitete Gabel. Der Spirit ist klar an die Legende der 1970er angelegt, die Kawasaki Z1. Die Z900RS SE ist nicht nur eine Homage an jenes Bike, sondern technisch einfach
-                      up-to-date.
-                  </p>
-                  <button class="btn bg-bike-primary text-white ml-4">Purchase</button>
-              </div>
-              <div class="flex-1">
-                  <img src="./images/banner.png" class=" w-[250px]  mb-0 pb-5 lg:w-[450px]" />
+                <div class="flex justify-center items-center">
+                  <img src="./images/Ellipse1.svg">
+                </div>
+                <h1 class="lg:text-4xl text-[#FFF] text-2xl mt-0 font-medium">Waled Hessian</h1>
+                <h3 class="text-[#FFF] text-2xl">UIX Designer</h3>
+                <p class="text-2xl text-[#F3F3F3] mx-32 px-12">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClinton, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, connecter.</p>
+                     
               </div>
           </div>
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
